# libcamera-apps

apps/: CMakeLists.txt  talk_to_camera.cpp
core/: CMakeLists.txt  libcamera_app.cpp
